Fixed the alignment classes (.left, .center, .right).

--- a/src/templates/framework/style.css
+++ b/src/templates/framework/style.css
@@ -178,9 +178,9 @@ border-top: 3px solid #4d4d4d;
 .inline {display:inline;}
 
 /*horizontal*/
-#content img, .center {text-align: center; display: block; margin-left: auto; margin-right: auto; }
-.left {text-align: left; display: block; margin-left: 0; margin-right: auto;  }
-.right {text-align: right; display: block; margin-left: auto; margin-right: 0;  }
+#content img, .center {text-align: center; display: block; margin-left: auto!important; margin-right: auto!important; }
+.left {text-align: left; display: block; margin-left: 0!important; margin-right: auto!important;  }
+.right {text-align: right; display: block; margin-left: auto!important; margin-right: 0!important;  }
 
 /*------------------------------------------------------
  TYPOGRAPHY
